--- a/src/main/resources/templates/admin/photos/index.html
+++ b/src/main/resources/templates/admin/photos/index.html
@@ -25,7 +25,15 @@
 			
 			<!-- Insert a new photo -->
 			<div class="col-auto px-2" sec:authorize="hasAuthority('ADMIN')">
-				<a href="photos/create" class="btn btn-success col-auto">Insert a new photo</a>
+				<a href="/admin/photos/create" class="btn btn-success col-auto">Insert a new photo</a>
+			</div>
+			
+			<!-- Go to Categories -->
+			<div class="col-auto ms-auto" sec:authorize="hasAuthority('ADMIN')">
+				<a href="/admin/categories" 
+					   class="d-inline-block btn btn-primary">
+					Go to Categories
+				</a>
 			</div>
 		</form>
 		
@@ -39,29 +47,31 @@
 			      <th scope="col">Title</th>
 			      <th scope="col">Description</th>
 			      <th scope="col">Tag</th>
+			      <th scope="col">Categories</th>
 			      <th scope="col">Photo</th>
 			      <th scope="col">Actions</th>
 			    </tr>
 	  		</thead>
 		  	<tbody>
-			    <tr th:each="photo : ${photos}" th:onclick="|window.location='/photos/${photo.id}';|" style="cursor:pointer;">
+			    <tr th:each="photo : ${photos}" th:onclick="|window.location='/admin/photos/${photo.id}';|" style="cursor:pointer;">
 			      <th>[[${photo.id}]]</th>
 			      <td>[[${photo.title}]]</td>
 			      <td>[[${photo.description}]]</td>
 			      <td>[[${photo.tag}]]</td>
+			      <td>[[${photo.categories}]]</td>
 			      <td><img th:src="@{${photo.url}}" width="100"></td>
 			      <!-- Actions -->
 			      <td class="td-actions">
 			      	<!-- Show -->
-					<a th:href="@{/photos/{id} (id=${photo.id})}" class="btn btn-primary">
+					<a th:href="@{/admin/photos/{id} (id=${photo.id})}" class="btn btn-primary">
 		      			<i class="fa-solid fa-sheet-plastic"></i>
 		      		</a>
 			      	<!-- Edit -->
-					<a th:href="@{/photos/edit/{id} (id=${photo.id})}" class="btn btn-success">
+					<a th:href="@{/admin/photos/edit/{id} (id=${photo.id})}" class="btn btn-success">
 		      			<i class="fa-regular fa-pen-to-square"></i>
 		      		</a>
 		      		<!-- Delete -->
-			      	<form action="#" th:action="@{/photos/delete/{id}(id=${photo.id})}" 
+			      	<form action="#" th:action="@{/admin/photos/delete/{id}(id=${photo.id})}" 
 			      		  method="post" class="d-inline-block">
 			      		<button type="submit" id="submitButton" class="btn btn-danger">
 			      			<i class="fa fa-trash-alt"></i>
