--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -15,7 +15,7 @@
 		<!-- Fontawesome CSS -->
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/6.3.0/css/all.min.css}">
 		<!-- Style CSS -->
-		<link rel="stylesheet" type="text/css" th:href="@{/css/app.css}">
+		<link rel="stylesheet" type="text/css" th:href="@{/css/admin/app.css}">
 	</th:block>
 	
 	<!-- Header -->
