--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css}">
 		<!-- Fontawesome CSS -->
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/6.3.0/css/all.min.css}">
-		<!-- Style CSS -->
+		<!-- App CSS -->
 		<link rel="stylesheet" type="text/css" th:href="@{/css/admin/app.css}">
 	</th:block>
 	
