--- a/src/main/resources/templates/guest/show.html
+++ b/src/main/resources/templates/guest/show.html
@@ -44,14 +44,12 @@
 					</div>
 					
 		            <!-- Content -->
-					<label for="contentComment">Comment</label>
+					<label for="contentComment" class="form-label">Comment</label>
 		            <textarea class="form-control" id="contentComment"
-		            		  placeholder="Leave a comment here"></textarea>
+		            		  placeholder="Leave a comment here" rows="8"></textarea>
 		            <!-- Validation Error -->
 				  	<div class="text-danger">
-						<ul id="content_err">
-							
-						</ul>
+						<ul id="content_err"></ul>
 					</div>
 		            
 		            <!-- Submit -->
