--- a/src/main/resources/static/css/admin/app.css
+++ b/src/main/resources/static/css/admin/app.css
@@ -21,20 +21,77 @@ sass --watch src/main/resources/sass/admin/app.scss:src/main/resources/static/cs
   background: lightgreen;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+h1 {
+  margin-top: 2rem;
+}
+
 /* PARTIALS */
 /* HEADER */
 header {
-  padding: 2rem 0;
-  /* 	background: lightblue; */
-  background: #6574cd;
+  background: black;
+  color: #f1f1f1;
+  font-size: 1.3rem;
 }
-
+header a {
+  margin: 1rem 0;
+}
+header a:hover {
+  color: white;
+}
 /* PARTIALS - Photos */
 table img {
   width: 10rem;
 }
 table .td-actions {
   min-width: 10rem;
+}
+
+.photoCard {
+  height: 40rem;
+  position: relative;
+}
+.photoCard img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.photoCard .btn {
+  background: rgba(0, 0, 0, 0.6117647059);
+  color: white;
+  transition: 0.3s;
+}
+.photoCard .btn:hover {
+  border-color: white;
+}
+.photoCard .card-img-overlay {
+  padding: 6rem;
+  display: flex;
+  align-items: center;
+  cursor: zoom-in;
+}
+.photoCard .card-img-overlay .actions {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+.photoCard .card-img-overlay .ms_container_caption {
+  background: rgba(0, 0, 0, 0.6117647059);
+  padding: 3rem;
+  border-radius: 0.5rem;
+}
+.photoCard .modal img {
+  max-width: 100%;
+}
+.photoCard .modal .modal-dialog {
+  max-width: fit-content;
+}
+.photoCard .modal.fade.show {
+  cursor: zoom-out;
 }
 
 input {
