--- a/src/main/resources/templates/admin/categories/index.html
+++ b/src/main/resources/templates/admin/categories/index.html
@@ -7,8 +7,13 @@
 <th:block th:replace="~{fragments :: head}"></th:block>
 </head>
 <body>
+	<!-- HEADER -->
+	<header th:replace="~{fragments :: header('categoryIndex')}"></header>
+	
+	<!-- MAIN -->
 	<main class="container">
-		<h1 class="text-center my-5">Categories</h1>
+	
+		<h1 class="text-center">Categories</h1>
 		
 		
 		<!-- IF the Categories are not found -->
@@ -16,7 +21,7 @@
 		
 		<!-- Insert a new Category -->
 		<div class="col-auto px-2">
-			<a href="categories/create" class="btn btn-primary col-auto mb-3">Insert a new Category</a>
+			<a href="categories/create" class="btn btn-dark col-auto mb-3">Insert a new Category</a>
 		</div>
 		
 		<!-- ELSE: Category List -->
@@ -35,12 +40,13 @@
 			      <!-- ACTIONS -->
 			      <td>
 			      	<!-- Edit -->
-					<a th:href="@{/admin/categories/edit/{id} (id=${category.id})}" class="btn btn-success">
+					<a th:href="@{/admin/categories/edit/{id} (id=${category.id})}" 
+					   class="btn btn-outline-success me-2">
 		      			<i class="fa-regular fa-pen-to-square"></i>
 		      		</a>
 		      		<!-- Delete -->
 			      	<form action="#" th:action="@{/admin/categories/delete/{id}(id=${category.id})}" method="post" class="d-inline-block">
-			      		<button type="submit" id="submitButton" class="btn btn-danger">
+			      		<button type="submit" id="submitButton" class="btn btn-outline-danger">
 			      			<i class="fa fa-trash-alt"></i>
 			      		</button>
 			      	</form>
