--- a/src/main/resources/templates/admin/photos/show.html
+++ b/src/main/resources/templates/admin/photos/show.html
@@ -8,69 +8,54 @@
 </head>
 <body>
 	<!-- HEADER -->
-	<!-- <header th:replace="~{fragments :: header}"></header> -->
+	<header th:replace="~{fragments :: header('photoShow')}"></header>
 	
 	<!-- MAIN -->
 	<main class="container">
-		<!-- Go to Photos -->
-		<a th:href="@{/}" class="my-3 d-inline-block btn btn-outline-primary">
-			Go to Photos &nbsp;<i class="fa fa-right-from-bracket"></i>
-		</a>
-		<!-- Edit -->
-		<a th:href="@{/admin/photos/edit/{id} (id=${photo.id})}" class="btn btn-outline-success"
-		   sec:authorize="hasAuthority('ADMIN')">
-   			Edit <i class="fa-regular fa-pen-to-square"></i>
-   		</a>
-   		<!-- Delete -->
-      	<form action="#" th:action="@{/admin/photos/delete/{id}(id=${photo.id})}" method="post" 
-      		  sec:authorize="hasAuthority('ADMIN')" class="d-inline-block">
-      		<button type="submit" id="submitButton" class="btn btn-outline-danger">
-      			Delete <i class="fa fa-trash-alt"></i>
-      		</button>
-      	</form>
-		
-		<h1 th:text="${photo.title}" class="text-center my-5"></h1>
-		<div class="row">
-			<div class="ms-auto col-6">
-				<img th:alt="${photo.title}" th:src="@{${photo.url}}" class="mb-3" width="100%">
-				<h4>Description</h4>
-				<p>[[${photo.description}]]</p>
-			</div>
-			<div class="me-auto col-4">
-				<h4 class="mt-0">Categories</h4>
-				<div th:if="${photo.categories.size()<=0}" class="mb-5">Categories not found</div>
-				<table th:if="${photo.categories.size()>0}" class="table table-hover align-middle">
-					<thead>
-					    <tr>
-					      <th scope="col">#</th>
-					      <th scope="col">Name</th>
-					    </tr>
-			  		</thead>
+		<!-- Title -->
+		<h1 th:text="${photo.title}" class="text-center mb-5"></h1>
+		<!-- Photo Card -->
+		<div class="card photoCard text-bg-dark">
+		  <img th:alt="${photo.title}" th:src="@{${photo.url}}" class="card-img">
+		  <div class="card-img-overlay" data-bs-toggle="modal" data-bs-target="#exampleModal">
+		  	<!-- Actions -->
+		  	<div class="actions">
+				<!-- Modal -->
+				<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				  <div class="modal-dialog modal-dialog-centered">
+				    
+				    <img th:alt="${photo.title}" th:src="@{${photo.url}}" class="card-img">
 
-					<tbody>
-					    <tr th:each="category : ${photo.categories}">
-					      <td>[[${category.id}]]</td>
-					      <td>[[${category.name}]]</td>
-					      <td sec:authorize="hasAuthority('ADMIN')">
-							<a th:href="@{/admin/categories/edit/{id} (id=${category.id})}" 
-							   class="btn btn-success">
-				      			<i class="fa-regular fa-pen-to-square"></i>
-				      		</a>
-					      	<form th:action="@{/admin/categories/delete/{id} (id=${category.id})}" 
-					      		  method="post" class="d-inline-block">
-					      		<button type="submit" id="submitButton" class="btn btn-danger">
-					      			<i class="fa fa-trash-alt"></i>
-					      		</button>
-					      	</form>
-					      </td>
-					    </tr>
-				  	</tbody>
-				</table>
+				  </div>
+				</div>
 				
-				<!-- Tag -->
-				<h4 class="mt-5">Tag</h4>
-				<div>[[${photo.tag}]]</div>
-			</div>
+		  		<!-- Edit -->
+				<a th:href="@{/admin/photos/edit/{id} (id=${photo.id})}" class="btn"
+				   sec:authorize="hasAuthority('ADMIN')">
+		   			Edit <i class="fa fa-pen-to-square"></i>
+		   		</a>
+		   		<!-- Delete -->
+		      	<form action="#" th:action="@{/admin/photos/delete/{id}(id=${photo.id})}" 
+		      		  method="post" class="d-inline-block" sec:authorize="hasAuthority('ADMIN')">
+		      		<button type="submit" id="submitButton" class="btn">
+		      			Delete <i class="fa fa-trash-alt"></i>
+		      		</button>
+		      	</form>
+		  	</div>
+		  	<div class="ms_container_caption">
+		  		<!-- Description -->
+			    <h5 class="card-title">Description</h5>
+			    <p class="card-text">[[${photo.description}]]</p>
+			    <!-- Tag and Categories -->
+				<div class="mb-3 tagCategories card-text">
+					<span class="fw-semibold text-decoration-underline d-inline-block">Tag: </span>
+					<span id="photoTag" class="px-2">[[${photo.tag}]]</span> | 
+					<span class="fw-semibold text-decoration-underline d-inline-block px-2">Categories: </span>
+					<span th:if="${photo.categories.size()<=0}" id="photoCategories">None</span>
+					<span th:if="${photo.categories.size()>0}" id="photoCategories">[[${photo.categories}]]</span>
+				</div>
+		  	</div>
+		  </div>
 		</div>
 	</main>
 	
