guest and admin validations. Reset comment form fields in guest/photo/show

--- a/src/main/resources/templates/admin/categories/create.html
+++ b/src/main/resources/templates/admin/categories/create.html
@@ -7,6 +7,10 @@
 <th:block th:replace="~{fragments :: head}"></th:block>
 </head>
 <body>
+	<!-- HEADER -->
+	<header th:replace="~{fragments :: header('categoryCreate')}"></header>
+	
+	<!-- MAIN -->
 	<main class="container">
 		<h1 class="mt-4">Insert a new Category</h1>
 		
@@ -23,7 +27,7 @@
 			</div>
 		  	
 		  	<!-- Button Insert -->
-		  	<button type="submit" class="btn btn-primary mt-3">Insert</button>
+		  	<button type="submit" class="btn btn-dark mt-3">Insert</button>
 		</form>
 	</main>
 
