--- a/src/main/resources/templates/guest/index.html
+++ b/src/main/resources/templates/guest/index.html
@@ -35,13 +35,7 @@
 			<!-- Tag Select -->
 			<div class="col-auto ms-auto">
 				<select class="form-select" id="tagKeyword" onchange="photoList(nameKeyword, tagKeyword)">
-					<!-- 
-					<option value="" selected disabled>Filter by tag</option>
-					<option value="">All Tags</option>
-					<option value="Architecture">Architecture</option>
-					<option value="Nature">Nature</option>
-					<option value="Food">Food</option>
-					 -->
+					<!-- Created in photo/guest/index.js -->
 				</select>
 			</div>
 		</form>
@@ -69,7 +63,7 @@
 	<!-- Scripts -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js" integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./scripts/photo/index.js"></script>
+    <script src="./scripts/guest/photo/index.js"></script>
 </body>
 </html>
 
