--- a/src/main/resources/templates/guest/index.html
+++ b/src/main/resources/templates/guest/index.html
@@ -14,8 +14,18 @@
     <link rel="stylesheet" type="text/css" href="/css/admin/app.css">
 </head>
 <body>
-	<!-- HEADER -->
-	
+	<!-- Header -->
+	<header>
+		<div class="container">
+			<div class="row justify-content-end align-items-center">
+				<div class="col-auto">
+					<div class="header-right fs-4 py-1 ">
+						<a href="/login">Login</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
 	
 	<!-- MAIN -->
 	<main class="container">
