--- a/src/main/resources/templates/guest/show.html
+++ b/src/main/resources/templates/guest/show.html
@@ -14,6 +14,26 @@
     <link rel="stylesheet" type="text/css" href="/css/admin/app.css">
 </head>
 <body>
+	<!-- HEADER -->
+	<header>
+		<div class="container">
+			<div class="row justify-content-between align-items-center">
+				<nav class="col-auto">
+					<!-- Photos -->
+					<a href="/" class="d-inline-block me-3">
+						Photos 
+					</a>
+				</nav>
+				<div class="col-auto">
+					<div class="header-right fs-4 py-1">
+						<a href="/login">Login</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	
+	<!-- HEADER -->
 	<main class="container">
 		
 		<h1 id="photoTitle" class="text-center my-5"></h1>
@@ -48,19 +68,19 @@
 		            <textarea class="form-control" id="contentComment"
 		            		  placeholder="Leave a comment here" rows="8"></textarea>
 		            <!-- Validation Error -->
-				  	<div class="text-danger">
+				  	<div class="text-danger mt-2">
 						<ul id="content_err"></ul>
 					</div>
 		            
 		            <!-- Submit -->
-		            <button type="submit" class="btn btn-primary mt-3">Submit</button>
+		            <button type="submit" class="btn btn-dark mt-3">Submit</button>
 	            </form>
 				
 				<!-- Comment List -->
 				<h4 class="mt-5">Comment List</h4>
 				<div id="no_comments">Comments not found</div>
 				<div id="commentList" class="row">
-					<!-- Loop in guest/show.js -->
+					<!-- Comment List generates in guest/photo/show.js -->
 				</div>
 			</div>
 		</div>
