--- a/src/main/resources/templates/guest/index.html
+++ b/src/main/resources/templates/guest/index.html
@@ -39,12 +39,13 @@
 					   name="keyword" placeholder="Name">
 			</div>
 			<div class="col-auto px-2">
-				<button type="submit" class="btn btn-primary col-auto">Search</button>
+				<button type="submit" class="btn btn-dark col-auto">Search</button>
 			</div>
 			
 			<!-- Tag Select -->
 			<div class="col-auto ms-auto">
-				<select class="form-select" id="tagKeyword" onchange="photoList(nameKeyword, tagKeyword)">
+				<select class="form-select" id="tagKeyword" 
+						onchange="photoList(nameKeyword, tagKeyword)">
 					<!-- Created in photo/guest/index.js -->
 				</select>
 			</div>
