--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,12 +23,12 @@
 		<div class="container">
 			<div class="row justify-content-between align-items-center">
 				<nav class="col-auto">
-					<span>Dashboard: </span>
+					<span class="me-3">Dashboard: </span>
 					<!-- Photos -->
-					<a th:if="${namePage != 'photoIndex'}" th:href="@{/admin/photos}" class="d-inline-block me-3">
+					<a th:if="${namePage != 'photoIndex'}" th:href="@{/admin/photos}" class="d-inline-block me-3 text-decoration-underline">
 						Photos 
 					</a>
-					<a th:if="${namePage != 'categoryIndex'}" href="/admin/categories" class="d-inline-block">
+					<a th:if="${namePage != 'categoryIndex'}" href="/admin/categories" class="d-inline-block text-decoration-underline">
 						Categories
 					</a>
 				</nav>
@@ -41,7 +41,7 @@
 					<div class="header-right fs-4 py-1">
 						<span class="fs-4" sec:authentication="name"></span> 
 						<span sec:authentication="principal.authorities"></span> |  
-						<a href="/logout">Esci</a>
+						<a href="/logout">Logout</a>
 					</div>
 				</div>
 			</div>
