--- a/src/main/resources/templates/guest/index.html
+++ b/src/main/resources/templates/guest/index.html
@@ -11,7 +11,7 @@
     <!-- Fontawesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <!-- App CSS -->
-    <link rel="stylesheet" type="text/css" href="/css/admin/app.css">
+    <link rel="stylesheet" type="text/css" href="/css/guest/app.css">
 </head>
 <body>
 	<!-- Header -->
@@ -19,7 +19,7 @@
 		<div class="container">
 			<div class="row justify-content-end align-items-center">
 				<div class="col-auto">
-					<div class="header-right fs-4 py-1 ">
+					<div class="header-right fs-4 py-1 my-2">
 						<a href="/login">Login</a>
 					</div>
 				</div>
@@ -29,7 +29,7 @@
 	
 	<!-- MAIN -->
 	<main class="container">
-		<h1 class="text-center mb-5">Photos</h1>
+		<h1 class="text-center">Photos</h1>
 		
 		<!-- Search by name -->
 		<form id="photoIndexForm" class="row my-5" 
