--- a/src/main/resources/templates/guest/show.html
+++ b/src/main/resources/templates/guest/show.html
@@ -11,7 +11,7 @@
     <!-- Fontawesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <!-- App CSS -->
-    <link rel="stylesheet" type="text/css" href="/css/admin/app.css">
+    <link rel="stylesheet" type="text/css" href="/css/guest/app.css">
 </head>
 <body>
 	<!-- HEADER -->
@@ -36,7 +36,7 @@
 	<!-- HEADER -->
 	<main class="container">
 		
-		<h1 id="photoTitle" class="text-center my-5"></h1>
+		<h1 id="photoTitle" class="text-center"></h1>
 		<div class="row justify-content-between">
 			<div class="ms-auto col-8">
 				<!-- Photo -->
