--- a/src/main/resources/sass/guest/partials/_header.scss
+++ b/src/main/resources/sass/guest/partials/_header.scss
@@ -1,6 +1,15 @@
 /* HEADER */
 header {
-	padding: 2rem 0;
-/* 	background: lightblue; */
-	background: $indigo;
+	padding: 0.5rem 0;
+	background: black;
+	color: white;
+	
+	a {
+		font-size: 1.5rem;
+		color: rgb(241 241 241);
+		
+		&:hover{
+			color: white;
+		}
+	}
 }
