--- a/src/main/resources/sass/guest/partials/photos/_show.scss
+++ b/src/main/resources/sass/guest/partials/photos/_show.scss
@@ -1,16 +1,50 @@
-/* PARTIALS - Photos !!!!!!!!!!!!!!!!!! */
-* {
-	color: red !important;
+/* PARTIALS - Photos */
+.card-body {
+	
+	p {
+		font-size: 1.25rem;
+	}
+	.authorComment {
+		font-size: 1.2rem;
+	}
 }
-.authorComment {
-    color: #3c3c3c;
-    font-size: 14px;
-    font-weight: bold;
-    color: red;
-}
-.contentComment {
-	color: #484848;
-	font-size: 15px;
-	line-height: 22px;
-	color: red;
+
+.photoCard {
+
+	img {
+		width: 100%;
+  		height:100%;
+	}
+
+	.btn {
+		background: #0000009c;
+		color: white;
+		transition: .3s;
+		
+		&:hover {
+			border-color: white;
+		}
+	}
+
+	.card-img-overlay {
+		padding: 6rem;
+		display: flex;
+    	align-items: center;
+    	cursor: zoom-in;
+	}
+	
+	.modal {
+	
+		img {
+			max-width: 100%;
+		}
+		
+		.modal-dialog {
+			max-width: fit-content;
+		}
+		
+		&.fade.show {
+			cursor: zoom-out;
+		}
+	}
 }
