--- a/src/main/resources/templates/admin/photos/show.html
+++ b/src/main/resources/templates/admin/photos/show.html
@@ -24,7 +24,7 @@
 				<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				  <div class="modal-dialog modal-dialog-centered">
 				    
-				    <img th:alt="${photo.title}" th:src="@{${photo.url}}" class="card-img">
+				    <img th:alt="${photo.title}" th:src="@{${photo.url}}" class="card-img" width="100%">
 
 				  </div>
 				</div>
