--- a/src/main/resources/sass/guest/partials/photos/_show.scss
+++ b/src/main/resources/sass/guest/partials/photos/_show.scss
@@ -1,50 +1,34 @@
 /* PARTIALS - Photos */
-.card-body {
-	
-	p {
-		font-size: 1.25rem;
-	}
-	.authorComment {
-		font-size: 1.2rem;
+#btnModal {
+	border: none;
+	margin-bottom: 0.5rem;
+
+	&:hover {
+		cursor: zoom-in;
 	}
 }
-
-.photoCard {
+#photoUrl {
+	width: 100%;
 
 	img {
-		width: 100%;
-  		height:100%;
-	}
-
-	.btn {
-		background: #0000009c;
-		color: white;
-		transition: .3s;
 		
-		&:hover {
-			border-color: white;
-		}
 	}
-
-	.card-img-overlay {
-		padding: 6rem;
-		display: flex;
-    	align-items: center;
-    	cursor: zoom-in;
-	}
+}
+.modal {
 	
-	.modal {
-	
+	.modal-dialog {
+		height: 100%;
+		
+		margin: 0 auto;
+		justify-content: center;
+		
 		img {
-			max-width: 100%;
+			margin: 0 auto;
+			max-height: 100%;
 		}
-		
-		.modal-dialog {
-			max-width: fit-content;
-		}
-		
-		&.fade.show {
-			cursor: zoom-out;
-		}
+	}
+	
+	&.fade.show {
+		cursor: zoom-out;
 	}
 }
